Refine Javassist DefinePackageHelper JavaOther test